# improved-zk-ram

./: LICENSE  README.md  build.sh  setup.sh
baseline/: build.sh
baseline/test/: CMakeLists.txt
baseline/test/ram/: ram_test.cpp  ro_ram_test.cpp
emp-zk/extensions/ram-zk/: zk-mem.h
test/: CMakeLists.txt
test/arith/: GOT.cpp  GOT_block.cpp  GOT_nomulcheck.cpp  inset_zk_rom.cpp  inset_zk_rom_block.cpp  zk_ram.cpp  zk_ram_block.cpp  zk_rom.cpp  zk_rom_block.cpp
zk-ram/: inset_rom.h  ram.h  rom.h
